# GMacros

./: .gitignore  CMakeLists.txt  README.md  app.rc  main.cpp  resources.qrc
